--- a/pom.xml
+++ b/pom.xml
@@ -10,26 +10,66 @@
   	<dependency>
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-webmvc</artifactId>
-  		<version>4.3.3.RELEASE</version>
+  		<version>${spring.version}</version>
   	</dependency>
   	
   	<dependency>
   		<groupId>javax.servlet</groupId>
   		<artifactId>jstl</artifactId>
-  		<version>1.2</version>
+  		<version>${servlet.version}</version>
   	</dependency>
   	
   	<dependency>
   		<groupId>javax.servlet</groupId>
   		<artifactId>javax.servlet-api</artifactId>
-  		<version>3.1.0</version>
+  		<version>${servlet.api.version}</version>
   		<!-- Tomcat 容器提供 -->
   		<scope>provided</scope>
   	</dependency>
+  	
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  		<scope>test</scope>
+  	</dependency>
+  	
+  	<!-- 日志配置 -->
+  	<dependency>
+  		<groupId>ch.qos.logback</groupId>
+  		<artifactId>logback-classic</artifactId>
+  		<version>${logback.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>ch.qos.logback</groupId>
+  		<artifactId>logback-core</artifactId>
+  		<version>${logback.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-api</artifactId>
+  		<version>${slf4j.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>log4j-over-slf4j</artifactId>
+  		<version>${slf4j.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>jcl-over-slf4j</artifactId>
+  		<version>${slf4j.version}</version>
+  	</dependency>
+  	
   </dependencies>
   
   <properties>
   	<maven.compiler.source>1.8</maven.compiler.source>
   	<maven.compiler.target>1.8</maven.compiler.target>
+  	<slf4j.version>1.7.7</slf4j.version>
+  	<logback.version>1.1.3</logback.version>
+  	<spring.version>4.3.3.RELEASE</spring.version>
+  	<servlet.version>1.2</servlet.version>
+  	<servlet.api.version>3.1.0</servlet.api.version>
   </properties>
 </project>
