--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,23 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>${aspectj.version}</version>
 		</dependency>
+		
+		<!-- hadoop -->
+		 <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-hdfs</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-mapreduce-client-jobclient</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>
 
 	</dependencies>
 
@@ -152,5 +169,6 @@
 		<mybatis-spring.version>1.2.3</mybatis-spring.version>
 		<druid.version>1.0.15</druid.version>
 		<aspectj.version>1.8.4</aspectj.version>
+		<hadoop.version>2.7.3</hadoop.version>
 	</properties>
 </project>
