1. 修改工程发布名

--- a/pom.xml
+++ b/pom.xml
@@ -459,7 +459,7 @@
 		</dependency>	
 	</dependencies>
 	<build>
-		<finalName>cloud-forensic</finalName>
+		<finalName>woyun</finalName>
 		<pluginManagement>
 			<plugins>
 				<plugin>
